# DubbLM

./: README.md  dubbing_config.yml  dubblm_cli.py  pyproject.toml  requirements.txt
src/dubbing/cli/: main.py
src/dubbing/core/: config.py  smart_dubbing.py
src/tts/: __init__.py  bextts_wrapper.py  tts_factory.py  xtts_local_wrapper.py
