[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dubblm"
version = "0.1.0"
description = "AI-assisted video dubbing pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "ArteusAI"}
]
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ArteusAI/DubbLM"

[project.scripts]
dubblm = "dubbing.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dubbing*", "transcription*", "translation*", "tts*", "utils*"]
